# bandit-quota

./: LICENSE  README.md  pyproject.toml  requirements.txt
bandit-quota/: __init__.py  cli.py  core.py
bandit-quota/data/beir_runs/: msmarco.splade.tsv
bandit-quota/scripts/: bandit_quota_artifact.py  evaluate_multiple_retrievers.py  fetch_beir_runs.py  fetch_msmsplade.py
